--- a/templates/pedidos/destinatario.html
+++ b/templates/pedidos/destinatario.html
@@ -8,7 +8,7 @@
   <hr>
 
   <!-- Formulario principal de Finalizar Pedido -->
-  <form method="post" action="{% url 'actualizar_pedido' pedido_id %}">
+  <form method="post" action="{% url 'pedido_destinatario_guardar' pedido_id %}">
     {% csrf_token %}
     {{ formulario.as_p }}
     <input type="submit" value="Ir a pagar" class="btn btn-primary"> 
