--- a/templates/clientes/pedidos.html
+++ b/templates/clientes/pedidos.html
@@ -29,7 +29,9 @@
           <td data-label="Fecha:">{{ pedido.fecha }}</td>
           <td data-label="Destinatario:">{{ pedido.destinatario.nombre }}</td>
           <td data-label="Estado:">{{ pedido.estado }}</td>
-          <td data-label="Detalle:"> Ver detalle </td> <!-- rediccionar a el detalle del pedido  -->
+          <td data-label="Detalle:">
+            <a class="btn btn-primary" href="{% url 'lista_productos' pedido.id %}"><i class="fa-solid fa-save"></i> Ver Detalle</a>
+          </td> <!-- rediccionar a el detalle del pedido  -->
         </tr>
         {% endfor %}
       </tbody>
