--- a/templates/pedidos/listado.html
+++ b/templates/pedidos/listado.html
@@ -47,6 +47,7 @@
                   d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
               </svg>
               Editar</a>
+              <a class="btn btn-primary btn-sm" href="{% url 'lista_productos' pedido.id %}"><i class="fa-solid fa-save"></i> Ver Detalle</a>
           </td> <!-- rediccionar a el detalle del pedido  -->
         </tr>
         {% endfor %}
