--- a/templates/destinatarios/listado.html
+++ b/templates/destinatarios/listado.html
@@ -7,52 +7,62 @@
 
     <!-- Lista de destinatarios  -->
     <h2 class="mb-4">Lista de Destinatarios</h2>
+    <a href="{% url 'nuevo_destinatario' %}" class="nuevo-pedido mr-3"><i class="fa-solid fa-circle-plus"></i> Nuevo
+      Destinatario</a>
+      <form method="get" action="{% url 'pedidos' %}">
+        <div class="filters">
+            <label for="estado_pedido">Estado del Pedido:</label>
+            <select name="estado_pedido" id="estado_pedido">
+                <option value="">--Seleccione--</option>
+                {% for estado in estados_pedido %}
+                    <option value="{{ estado }}" {% if filtro_estado_pedido == estado %}selected{% endif %}>{{ estado }}</option>
+                {% endfor %}
+            </select>
+    
+            <label for="estado_pago">Estado del Pago:</label>
+            <select name="estado_pago" id="estado_pago">
+                <option value="">--Seleccione--</option>
+                {% for estado in estados_pago %}
+                    <option value="{{ estado }}" {% if filtro_estado_pago == estado %}selected{% endif %}>{{ estado }}</option>
+                {% endfor %}
+            </select>
+    
+            <button type="submit">Filtrar</button>
+        </div>
+    </form>
     
     <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Nombre</th>
-          <th scope="col">Teléfono</th>
-          <th scope="col">Ciudad</th>
-          <th scope="col">Direccion</th>
-          <th scope="col">Acciones </th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for destinatario in destinatarios %}
-        <tr>
-          <th scope="row" data-label="#">{{ forloop.counter }}</th>
-          <td data-label="Nombre">{{ destinatario.nombre }}</td>
-          <td data-label="Teléfono">{{ destinatario.telefono }}</td>
-          <td data-label="Ciudad">{{ destinatario.ciudad }}</td>
-          <td data-label="Dirección">{{ destinatario.direccion }}</td>
-          <td>
-
-            <a href="{% url 'detalle_destinatario' destinatario.id %}" class="btn btn-info btn-sm">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-                <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
-              </svg>
-              Editar</a>
-
-            <!-- Botón para borrar el destinatario -->
-            <form action="{% url 'eliminar_destinatario' destinatario.id %}" method="post" style="display:inline;" class="delete-form">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-danger btn-sm">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-                    <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
-                    <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
-                  </svg>
-                  Borrar
-                </button>
-            </form>
-
-          </td>
-        </tr>
-        {% endfor %}
-      </tbody>
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Cliente</th>
+                <th scope="col">Producto</th>
+                <th scope="col">Estado Pedido</th>
+                <th scope="col">Estado Pago</th>
+                <th scope="col">Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for pedido in pedidos %}
+            <tr>
+                <th scope="row" data-label="#">{{ forloop.counter }}</th>
+                <td data-label="Cliente">{{ pedido.cliente }}</td>
+                <td data-label="Producto">{{ pedido.producto }}</td>
+                <td data-label="Estado Pedido">{{ pedido.estado }}</td>
+                <td data-label="Estado Pago">{{ pedido.pago.estado }}</td>
+                <td>
+                    <!-- Botones para acciones -->
+                    <a href="{% url 'detalle_pedido' pedido.id %}" class="btn btn-info btn-sm">Ver Detalle</a>
+                    <form action="{% url 'eliminar_pedido' pedido.id %}" method="post" style="display:inline;" class="delete-form">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-danger btn-sm">Eliminar</button>
+                    </form>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
     </table>
+    
   </div>
 
 <script>
