--- a/templates/pedidos/listado.html
+++ b/templates/pedidos/listado.html
@@ -1,19 +1,33 @@
-<!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
 {% extends 'menu.html' %}
 
 {% block title %}Pedidos{% endblock %}
 
 {% block content %}
 
-  <div class="info-cliente">
+  <style>
+    .btn-info.btn-sm:hover {
+        filter: brightness(1.2);
+    }
+  </style>
 
-    <!-- Historial de pedidos  -->
+  <div class="info-cliente">
     <h2 class="mb-4">Lista de Pedidos</h2>
+    
+    <!-- Filtro de Estado del Pedido y del Pago -->
+    <div id="filtro">
+      <p style="padding-top: 8px; font-size: 20px;">Filtrar por estado:</p>
+      <button class="boton-categoria filtro-categoria activo" data-estado-pedido="">Todos</button>
+      <button class="boton-categoria filtro-categoria" data-estado-pedido="carrito">Carrito</button>
+      <button class="boton-categoria filtro-categoria" data-estado-pedido="enviado">Enviado</button>
+      <button class="boton-categoria filtro-categoria" data-estado-pedido="entregado">Entregado</button>
+      <br>
+      <p style="padding-top: 8px; font-size: 20px;">Filtrar por pago:</p>
+      <button class="boton-categoria filtro-categoria activo" data-estado-pago="">Todos</button>
+      <button class="boton-categoria filtro-categoria" data-estado-pago="pagado">Pagado</button>
+      <button class="boton-categoria filtro-categoria" data-estado-pago="validando">Validando</button>
+    </div>  
+
+    <!-- Tabla de Pedidos -->
     <table class="table">
       <thead>
         <tr>
@@ -22,97 +36,95 @@
           <th scope="col">Cliente</th>
           <th scope="col">Estado</th>
           <th scope="col">Pago</th>
-          <th scope="col">Destinatario </th>
-          <th scope="col">Acciones </th>
+          <th scope="col">Destinatario</th>
+          <th scope="col">Acciones</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody id="pedido-table-body">
         {% for pedido in pedidos %}
-        <tr>
+        <tr data-estado-pedido="{{ pedido.estado }}" data-estado-pago="{{ pedido.pago.estado }}">
           <th scope="row" data-label="#">{{ forloop.counter }}</th>
-          <!-- <th scope="row" data-label="#">{{ pedido.id }}</a></th> -->
           <td data-label="Fecha">{{ pedido.fecha }}</td>
           <td data-label="Cliente">{{ pedido.cliente.nombre }}</td>
           <td data-label="Estado">{{ pedido.estado }}</td>
-          <td data-label="Pago">{{ pedido.pago.estado }}</td>
-          <td data-label="Destinatario">{{ pedido.destinatario.nombre }}</td>
-          <td>
+          
+          <td data-label="Pago:">
+          {% if pedido.pago.estado %}
+            {% if pedido.pago.estado == "validadando" %}
+              <a class="btn btn-info btn-sm" style="background-color: #ec9813; color: white;" href="{{ pedido.pago.comprobante.url }}" target="_blank"><i class="fas fa-eye"></i> Ver Comprobante</a> 
+              <a class="btn btn-info btn-sm" style="background-color: #871f23; color: white;" href="{% url 'actualizar_estado_pago' pedido.pago.id %}" target="_blank"><i class="fas fa-check"></i> Validar Pago</a>
+            {% elif pedido.pago.estado == "pagado" %}
+              {{ pedido.pago.estado }}  
+            {% else %}
+              {{ pedido.pago.estado }}
+            {% endif %}
+          {% else %}
+          <i class="fas fa-exclamation-triangle"></i> No existe un pago asociado
+          {% endif %}
+          </td>
 
+          <td data-label="Destinatario:">
+            {% if pedido.destinatario %}
+            {{ pedido.destinatario.nombre }}
+            {% else %}
+            <i class="fas fa-exclamation-triangle"></i> No existe una direccion asociado
+            {% endif %}
+          </td>
+          
+          <td>
             <a href="{% url 'detalle_pedido' pedido.id %}" class="btn btn-info btn-sm">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                class="bi bi-pencil-square" viewBox="0 0 16 16">
-                <path
-                  d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-                <path fill-rule="evenodd"
-                  d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
               </svg>
-              Editar</a>
-              <a class="btn btn-primary btn-sm" href="{% url 'lista_productos' pedido.id %}"><i class="fa-solid fa-save"></i> Ver Detalle</a>
-          </td> <!-- rediccionar a el detalle del pedido  -->
+              Editar
+            </a>
+          </td>
         </tr>
         {% endfor %}
       </tbody>
     </table>
   </div>
-  
 
-<div class="modal fade" id="agregarProductoModal" tabindex="-1" aria-labelledby="agregarProductoModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-          <div class="modal-header">
-              <h5 class="modal-title" id="agregarProductoModalLabel">Agregar Producto</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-              <div class="row">
-                  <div class="col-12">
-                      <ul id="lista-productos" class="row">
-                          {% for producto in productos %}
-                          <li class="producto-item col-12 col-md-6 mb-3 d-flex">
-                              <div class="producto-imagen me-3">
-                                  <img src="{{ producto.imagen.url }}" alt="{{ producto.nombre }}" class="img-fluid">
-                              </div>
-                              <div class="producto-datos">
-                                  <strong>{{ producto.nombre }}</strong>
-                                  <div class="producto-precio mb-2">{{ producto.precio_base }}</div>
-                              </div>
-                              <div class="producto-opciones">
-                                
-                              </div>
-                          </li>
-                          {% endfor %}
-                      </ul>
-                  </div>
-              </div>
-          </div>
-          <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-              <button type="submit" form="formAgregarProducto" class="btn btn-primary">Guardar Producto</button>
-          </div>
-      </div>
-  </div>
-</div>
+  <!-- Agrega el script al final del bloque content -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+        // Manejar los filtros de estado del pedido
+        const filtrosPedido = document.querySelectorAll('.filtro-categoria[data-estado-pedido]');
+        filtrosPedido.forEach(boton => {
+            boton.addEventListener('click', () => {
+                // Remover la clase 'activo' de todos los botones y agregarla al botón seleccionado
+                filtrosPedido.forEach(btn => btn.classList.remove('activo'));
+                boton.classList.add('activo');
 
+                // Obtener el valor del filtro seleccionado
+                const estadoPedido = boton.getAttribute('data-estado-pedido');
+                
+                // Actualizar la URL con el parámetro estado_pedido
+                const url = new URL(window.location.href);
+                url.searchParams.set('estado_pedido', estadoPedido);
+                window.location.href = url.toString();
+            });
+        });
+
+        // Manejar los filtros de estado del pago
+        const filtrosPago = document.querySelectorAll('.filtro-categoria[data-estado-pago]');
+        filtrosPago.forEach(boton => {
+            boton.addEventListener('click', () => {
+                // Remover la clase 'activo' de todos los botones y agregarla al botón seleccionado
+                filtrosPago.forEach(btn => btn.classList.remove('activo'));
+                boton.classList.add('activo');
+
+                // Obtener el valor del filtro seleccionado
+                const estadoPago = boton.getAttribute('data-estado-pago');
+
+                // Actualizar la URL con el parámetro estado_pago
+                const url = new URL(window.location.href);
+                url.searchParams.set('estado_pago', estadoPago);
+                window.location.href = url.toString();
+            });
+        });
+    });
+</script>
 
 {% endblock %}
-
-<script>
-var agregarProductoModal = document.getElementById('agregarProductoModal');
-agregarProductoModal.addEventListener('show.bs.modal', function (event) {
-    // Botón que activó el modal
-    var button = event.relatedTarget;
-    // Extraer el ID del pedido del atributo data
-    var pedidoId = button.getAttribute('data-pedido-id');
-    
-    // Asegurarte de que pedidoId es válido
-    if (pedidoId) {
-        // Actualizar todos los enlaces dentro del modal con el ID del pedido
-        var links = agregarProductoModal.querySelectorAll('.producto-opciones a');
-        links.forEach(function(link) {
-            var href = link.getAttribute('href');
-            href = href.replace('pedido_id_placeholder', pedidoId); 
-            link.setAttribute('href', href);
-        });
-    }
-});
-</script>
