--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -15,8 +15,8 @@
       <button type="submit" class="btn btn-primary btn-block mb-4">Cerrar sesión</button>
     </form>
 
-    <div class="text-center mt-4">
+    <!-- <div class="text-center mt-4">
       <p><a href="{% url 'account_email' %}">Cambiar correo electrónico</a></p>
-    </div>
+    </div> -->
   </div>
 </main>
